# xf86-video-loongson7a

./: Makefile.am  README  configure.ac
conf/: 20-loongson.conf  Makefile.am  loongson-old.conf
man/: loongson7a.man
src/: Makefile.am  armsoc_dri2.c  armsoc_dri3.c  armsoc_driver.c  armsoc_driver.h  armsoc_dumb.c  armsoc_dumb.h  armsoc_exa.c  armsoc_exa.h  armsoc_exa_null.c  armsoc_present.c  armsoc_xv.c  compat-api.h  driver.c  driver.h  drmmode_cursor.c  drmmode_cursor.h  drmmode_display.c  drmmode_display.h  drmmode_driver.h  drmmode_loongson7a.c  dumb_bo.c  dumb_bo.h  fake_exa.c  loongson7a_module.c  loongson_debug.c  loongson_debug.h  loongson_dri2.c  loongson_dri2.h  loongson_dri3.c  loongson_dri3.h  loongson_driver.h  loongson_entity.c  loongson_entity.h  loongson_exa.h  loongson_helpers.c  loongson_helpers.h  loongson_module.c  loongson_options.c  loongson_options.h  (+9 more)
src/drmmode_omap/: drmmode_omap.c
src/viv2d/: etnaviv.c  etnaviv_drm.h  etnaviv_extra.c  etnaviv_extra.h  viv2d_config.h  viv2d_exa.c  viv2d_op.h
